syntax = "proto3";
package proto;
option java_multiple_files = true;
option java_package = "com.example.proto";

service UserService {
  rpc GetUserById (UserRequest) returns (UserResponse);
}

message UserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
}
